add Nginx, Cloudinary image upload, and product image_url
