# src/docs/swagger.yml
@@ -1,8 +1,8 @@
 openapi: 3.0.1
 info:
-  title: E_Commerce API
+  title: E_Commerce API/v1
   version: 1.0.0
-  description: Test Express API with autogenerated swagger doc
+  description: Test Express API/v1 with autogenerated swagger doc
 
 components:
   securitySchemes:
@@ -76,6 +76,8 @@ components:
         quantity:
           type: integer
           example: 10
+        image_url:
+          type: string
 
     UpdateProduct:
       type: object
@@ -251,7 +253,7 @@ components:
           - desc
 
 paths:
-  /api/users/register:
+  /api/v1/users/register:
     post:
       summary: Register a new user
       tags:
@@ -272,7 +274,7 @@ paths:
         "500":
           description: Server error
 
-  /api/users/login:
+  /api/v1/users/login:
     post:
       summary: Login user
       tags:
@@ -293,7 +295,7 @@ paths:
         "500":
           description: Server error
 
-  /api/users/refresh:
+  /api/v1/users/refresh:
     post:
       summary: Generate a new access token using refresh token
       description: Uses the refresh token stored in an HttpOnly cookie.
@@ -311,7 +313,7 @@ paths:
         "500":
           description: Server error
 
-  /api/users/logout:
+  /api/v1/users/logout:
     post:
       summary: Logout user
       description: Revokes the refresh token and clears the HttpOnly cookie.
@@ -327,7 +329,7 @@ paths:
         "500":
           description: Server error
 
-  /api/users/me:
+  /api/v1/users/me:
     get:
       summary: Get current user
       tags:
@@ -382,7 +384,7 @@ paths:
         "500":
           description: Server error
 
-  /api/products:
+  /api/v1/products:
     post:
       summary: Create a new product
       tags:
@@ -426,7 +428,7 @@ paths:
         "500":
           description: Server error
 
-  /api/products/{id}:
+  /api/v1/products/{id}:
     get:
       summary: Get product by ID
       tags:
@@ -489,7 +491,7 @@ paths:
         "500":
           description: Server error
 
-  /api/orders/myorders:
+  /api/v1/orders/myorders:
     get:
       summary: Get my orders
       tags:
@@ -506,7 +508,7 @@ paths:
         "500":
           description: Server error
 
-  /api/orders/{id}:
+  /api/v1/orders/{id}:
     get:
       summary: Get order by ID
       tags:
@@ -573,7 +575,7 @@ paths:
         "500":
           description: Server error
 
-  /api/orders/{id}/cancel:
+  /api/v1/orders/{id}/cancel:
     patch:
       summary: Cancel order by ID
       tags:
@@ -594,7 +596,7 @@ paths:
         "500":
           description: Server error
 
-  /api/orders/items/order/{order_id}:
+  /api/v1/orders/items/order/{order_id}:
     get:
       summary: Get all items for a specific order
       tags:
@@ -615,7 +617,7 @@ paths:
         "500":
           description: Server error
 
-  /api/orders/items/{id}:
+  /api/v1/orders/items/{id}:
     get:
       summary: Get order item by ID
       tags:
@@ -682,7 +684,7 @@ paths:
         "500":
           description: Server error
 
-  /api/cart:
+  /api/v1/cart:
     post:
       summary: Create a new cart
       tags:
@@ -731,7 +733,7 @@ paths:
         "500":
           description: Server error
 
-  /api/cart/delete:
+  /api/v1/cart/delete:
     delete:
       summary: Delete the current user's cart
       tags:
@@ -748,7 +750,7 @@ paths:
         "500":
           description: Server error
 
-  /api/cart/items:
+  /api/v1/cart/items:
     post:
       summary: Add a product to the current user's cart
       tags:
@@ -789,7 +791,7 @@ paths:
         "500":
           description: Server err
 
-  /api/cart/items/{id}:
+  /api/v1/cart/items/{id}:
     put:
       summary: Update cart item quantity
       tags:
@@ -838,7 +840,7 @@ paths:
         "500":
           description: Server error
 
-  /api/coupons:
+  /api/v1/coupons:
     post:
       summary: Create a new coupon
       tags:
@@ -863,7 +865,7 @@ paths:
         "500":
           description: Server error
 
-  /api/coupons/{code}:
+  /api/v1/coupons/{code}:
     get:
       summary: Get coupon by code
       description: Retrieve coupon details using its unique code.
@@ -909,7 +911,7 @@ paths:
         "500":
           description: Server error
 
-  /api/checkout:
+  /api/v1/checkout:
     post:
       summary: Create a new order from the current user's cart
       description: Creates an order from the authenticated user's cart and optionally applies a coupon.
